# shulker

./: .gitignore  Cargo.toml  Dockerfile.postgres  LICENSE  Makefile  README.md  buf.gen.yaml  docker-compose.yml
.devcontainer/: devcontainer.json  postCreate.sh  setup.sh
api/: Cargo.toml  build.rs
api/src/: main.rs
api/src/middleware/: jwt.rs
api/src/routes/: auth.rs  mod.rs  storage.rs  user.rs
apps/proto/: buf.gen.yaml  buf.yaml  go.mod
apps/proto/auth/: auth.proto
apps/proto/blob/: blob.proto
apps/proto/common/: error.proto
apps/proto/health/: health.proto
apps/proto/user/: user.proto
apps/server/: go.mod  go.sum  sqlc.yaml
apps/web/: README.md  package.json  vite.config.ts
apps/web/src/: app.html
auth/: Cargo.toml  build.rs
auth/src/: main.rs
auth/src/grpc/: token.rs
common/: Cargo.toml
common/src/: hash.rs  jwt.rs  utils.rs
common/src/db/: connection.rs  mod.rs  queries.rs  schema.rs
common/src/models/: file.rs  mod.rs  refresh.rs  user.rs
core/: Cargo.toml  build.rs
core/src/: main.rs
core/src/routes/: auth.rs  mod.rs
docs/: README.md  api.md  architecture.md  environment.md
proto/: token.proto  upload.proto  user.proto
scripts/: README.md  clean.sh  dev.sh  proto.sh  setup.sh
storage/: Cargo.toml  build.rs
storage/data/: db.sqlite3
storage/fs/user1/: example.txt
storage/src/: main.rs
storage/src/db/: connection.rs  mod.rs  schema.rs
storage/src/grpc/: upload.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
(+50 files in other folders)
